# parrotsoftware-treatment

./: .env.example  .gitignore  CLAUDE.md  COMPLETION_SUMMARY.md  IMPLEMENTATION_STATUS.md  README.md  WORD_FINDING_INTEGRATION_SUMMARY.md  cdevparrotsoftware-treatmentsupabasemigrations20250101000002_word_finding_data.sql  pytest.ini
.claude/: settings.local.json
backend/: .env.example  Dockerfile  main.py  pyproject.toml  pytest.ini
backend/app/: config.py  main.py
backend/app/core/: auth.py  database.py  dependencies.py
backend/app/models/: schemas.py
backend/app/routers/: auth.py  invites.py  items.py  life_words.py  life_words_information.py  life_words_questions.py  messaging.py  profile.py  results.py  short_term_memory.py  speech.py  treatments.py  word_finding.py
backend/app/services/: email_service.py  polly_service.py  speech_service.py  treatment_service.py
backend/tests/: conftest.py
backend/tests/integration/: test_auth_endpoints.py  test_invite_endpoints.py  test_life_words_endpoints.py  test_life_words_information_endpoints.py  test_life_words_questions_endpoints.py  test_messaging_endpoints.py  test_profile_endpoints.py  test_results_endpoints.py  test_short_term_memory_endpoints.py  test_treatment_endpoints.py
backend/tests/unit/core/: test_auth.py  test_database.py
backend/tests/unit/services/: __init__.py  test_email_service.py  test_speech_service.py  test_treatment_service.py
docs/: AI_PERSONALIZATION_BRAINSTORM.md  SECRET_MANAGER_MIGRATION.md  WORD_FINDING_INTEGRATION.md  claude.md  testing.md
frontend/: Dockerfile  (+2 more)
(+103 files in other folders)
